fix(style): match header spacing from index to articles

--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ body {
   font-size: 1.2em;
   font-family: 'EB Garamond', 'Times New Roman', serif;
   background-color: #f9f5d7;
-  margin: 100px 200px;
+  margin: 50px 200px;
   scroll-behavior: smooth;
   overscroll-behavior-y: none;
   overscroll-behavior-x: none;
